# interpol-pipeline

./: .dockerignore  .env.example  CLAUDE.md  CONTRACT.md  Makefile  README.md  alembic.ini  docker-compose.yml  gitignore  prd.md  pyproject.toml
.claude/: settings.json
.claude/agents/: backend.md  frontend.md  qa.md
.github/workflows/: ci.yml
app/api/: db.py  dependencies.py  deps.py  main.py  schemas.py  websocket.py  ws.py
app/api/routers/: alerts.py  notices.py  ui.py  ws.py
app/common/: config.py  db.py  logging.py  models.py  mq.py  redis_client.py  storage.py
app/fetcher/: client.py  main.py  publisher.py  sweep.py
app/web/static/: app.js  style.css
app/web/templates/: _notice_list.html  base.html  dashboard.html  detail.html  index.html  notice_detail.html
app/web/templates/partials/: notice_list.html
app/worker/: main.py  normalizer.py  photo_service.py  processor.py  redis_publisher.py  repository.py
docker/: api.Dockerfile  fetcher.Dockerfile  test.Dockerfile  worker.Dockerfile
migrations/: env.py
migrations/versions/: 001_initial_schema.py
tests/: test_api.py  test_config.py  test_fetcher.py  test_logging.py  test_normalizer.py  test_processor.py  test_sweep.py  test_websocket.py
