[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "interpol-pipeline"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
common = [
    "pydantic-settings>=2.3",
    "structlog>=24.2",
]
api = [
    "interpol-pipeline[common]",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "redis>=5.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "aiofiles>=23.0",
]
worker = [
    "interpol-pipeline[common]",
    "pika>=1.3",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "minio>=7.2",
    "redis>=5.0",
    "curl-cffi>=0.7",
    "alembic>=1.13",
]
fetcher = [
    "interpol-pipeline[common]",
    "pika>=1.3",
    "curl-cffi>=0.7",
]
dev = [
    "interpol-pipeline[api,worker,fetcher]",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "httpx-ws>=0.4",
    "testcontainers[postgres,rabbitmq,minio,redis]>=4.7",
    "ruff>=0.4",
    "mypy>=1.10",
    "alembic>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["migrations/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
